--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,12 +32,14 @@ jobs:
         run: npm run test:integration
 
   e2e-test:
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: ubuntu-latest
+    services:
+      verdaccio:
+        image: verdaccio/verdaccio:5
+        ports:
+          - 4873:4873
     strategy:
       matrix:
-        os: 
-          - ubuntu
-          - windows
         node:
           - "18.x" # Oldest supported lts
           - "20.x" # Newest lts
@@ -50,6 +52,19 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
+      - name: Add test user
+        run: npx npm-cli-login -u tester -p 123456 -e tester@example.com -r http://localhost:4873
+      - name: Add test packages
+        run: |
+          root_dir=$(pwd)
+          for dir in .github/verdaccio/*/; do
+            if [ -f "$dir/package.json" ]; then
+              echo "Publishing $dir"
+              cd "$dir"
+              npm publish --registry http://localhost:4873
+              cd "$root_dir"
+            fi
+          done
       - name: Install dependencies
         run: npm ci
       - name: Build
